# qapla-chess-gui

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  changelog.md  imgui.ini  qapla-chess-gui.cpp  qapla-chess-gui.ini  qapla-chess-gui.sln  qapla-chess-gui.vcxproj  qapla-chess-gui.vcxproj.filters  resources.rc  sonar-project.properties  test-engine.txt  test-engine2.txt  tutorial-tests-working.txt
.github/: copilot-instructions.md
.github/workflows/: sonarcloud.yml
assets/: embed_logo.ps1
code-doku/: i18n-translator-module.md
copilot/: requests.txt
diagnostic-engine/: CMakeLists.txt  README.md  diagnostic-engine.cpp
docs/: CHATBOT_STEP_PATTERN.md
docs/code-doku/: BAR_CHART.md  REMOTE_DESKTOP_OPTIMIZATION.md
glad/include/glad/: glad.h
glad/src/: glad.c
i18n/: README.md  cleanup_old_translations.ps1  deu-lang.cpp  deu-lang.h  deu.lang  eng-lang.cpp  eng-lang.h  eng.lang  fra-lang.cpp  fra-lang.h  fra.lang  generate_i18n.ps1  missing_translations.txt
src/: GameRecordManager.cpp  auto-save-file.cpp  auto-save-file.h  autosavable.cpp  autosavable.h  background-renderer.cpp  background-renderer.h  board-data.cpp  board-data.h  board-window.cpp  board-window.h  board-workspace.cpp  board-workspace.h  board.cpp  board.h  callback-manager.cpp  callback-manager.h  chatbot-choose-language.cpp  chatbot-choose-language.h  chatbot-step-finish.cpp  chatbot-step-finish.h  chatbot-step-option-list.cpp  chatbot-step-option-list.h  chatbot-step-select-option.cpp  chatbot-step-select-option.h  chatbot-step-tournament-configuration.h  chatbot-step-tournament-global-settings.cpp  chatbot-step-tournament-load-engine.cpp  chatbot-step-tournament-load-engine.h  chatbot-step-tournament-pgn.cpp  chatbot-step-tournament-pgn.h  chatbot-step-tournament-save-existing.cpp  chatbot-step-tournament-save-existing.h  chatbot-step-tournament-select-engines.cpp  chatbot-step-tournament-select-engines.h  chatbot-step-tournament-start.cpp  chatbot-step-tournament-start.h  chatbot-step-tournament-stop-running.cpp  chatbot-step-tournament-stop-running.h  chatbot-step.h  (+167 more)
src/chatbot/: chatbot-choose-language.cpp  chatbot-choose-language.h  chatbot-messages.cpp  chatbot-messages.h  chatbot-snackbar-capture.cpp  chatbot-snackbar-capture.h  chatbot-step-finish.cpp  chatbot-step-finish.h  chatbot-step-global-settings.cpp  chatbot-step-global-settings.h  chatbot-step-load-engine.cpp  chatbot-step-load-engine.h  chatbot-step-option-list.cpp  chatbot-step-option-list.h  chatbot-step-select-engines.cpp  chatbot-step-select-engines.h  chatbot-step-select-option.cpp  chatbot-step-select-option.h  chatbot-step-sprt-tournament-result.cpp  chatbot-step-sprt-tournament-result.h  chatbot-step-standard-tournament-result.cpp  chatbot-step-standard-tournament-result.h  chatbot-step-tournament-configuration.cpp  chatbot-step-tournament-configuration.h  chatbot-step-tournament-continue-existing.cpp  chatbot-step-tournament-continue-existing.h  chatbot-step-tournament-global-settings.cpp  chatbot-step-tournament-global-settings.h  chatbot-step-tournament-load-engine.cpp  chatbot-step-tournament-load-engine.h  chatbot-step-tournament-load.cpp  chatbot-step-tournament-load.h  chatbot-step-tournament-menu.cpp  chatbot-step-tournament-menu.h  chatbot-step-tournament-opening.cpp  chatbot-step-tournament-opening.h  chatbot-step-tournament-pgn.cpp  chatbot-step-tournament-pgn.h  chatbot-step-tournament-result.cpp  chatbot-step-tournament-result.h  (+16 more)
src/chatbot/add-engines/: chatbot-add-engines.cpp  chatbot-add-engines.h  chatbot-step-add-engines-welcome.cpp  chatbot-step-add-engines-welcome.h
src/chatbot/board/: chatbot-board.cpp  chatbot-board.h  chatbot-step-board-finish.cpp  chatbot-step-board-finish.h  chatbot-step-board-select.cpp  chatbot-step-board-select.h  chatbot-step-board-set-engines.cpp  chatbot-step-board-set-engines.h  chatbot-step-board-time-control.cpp  chatbot-step-board-time-control.h
src/chatbot/epd/: chatbot-epd.cpp  chatbot-epd.h  chatbot-step-epd-configuration.cpp  chatbot-step-epd-configuration.h  chatbot-step-epd-continue-existing.cpp  chatbot-step-epd-continue-existing.h  chatbot-step-epd-select-engines.cpp  chatbot-step-epd-select-engines.h  chatbot-step-epd-start.cpp  chatbot-step-epd-start.h  chatbot-step-epd-stop-running.cpp  chatbot-step-epd-stop-running.h
src/chatbot/sprt/: chatbot-sprt.cpp  chatbot-sprt.h  chatbot-step-sprt-configuration.cpp  chatbot-step-sprt-configuration.h  (+4 more)
src/data/: chess-font.h  ibm-plex-mono-font.cpp  ibm-plex-mono-font.h  logo-data.cpp  logo-data.h
src/imgui-helper/: imgui-text-button.cpp  imgui-text-button.h
src/qapla-engine/: bitboardmasks.cpp  bitboardmasks.h  bits.h  board.cpp  board.h  boardstate.h  evalvalue.h  fenscanner.h  hashconstants.h  magics.cpp  magics.h  materialbalance.h  move.h  movegenerator.cpp  movegenerator.h  movelist.h  movescanner.h  piecesignature.cpp  piecesignature.h  pst.h  types.h
src/qapla-tester/: adjucation-manager.cpp  adjudication-manager.cpp  adjudication-manager.h  app-error.h  board-exchange.cpp  board-exchange.h  change-tracker.h  cli-settings-manager.cpp  cli-settings-manager.h  compute-task.cpp  compute-task.h  elo-helper.h  engine-adapter.cpp  engine-adapter.h  engine-config-manager.cpp  engine-config-manager.h  engine-config.cpp  engine-config.h  engine-event.h  engine-option.h  engine-process.cpp  engine-process.h  engine-record.h  engine-report.cpp  engine-report.h  engine-test-controller.cpp  engine-test-controller.h  engine-test-functions.cpp  engine-test-functions.h  engine-worker-factory.cpp  engine-worker-factory.h  engine-worker.cpp  engine-worker.h  epd-manager.cpp  epd-manager.h  epd-reader.cpp  epd-reader.h  epd-test-manager.h  epd-test.cpp  epd-test.h  (+51 more)
src/test-system/: epd-chatbot-tests.cpp  epd-chatbot-tests.h  regression-tests.cpp  regression-tests.h  test-common.h  test-manager.cpp  test-manager.h  tutorial-tests.cpp
test/: Noomen.pgn  engines.ini  imgui.ini  pgn_parser (1).cpp  qapla-chess-gui.ini  test.html  test.qtour  test_vector_copy.cpp
(+56 files in other folders)
